Implemented Watershed Algorithm for Oyster Segmentation
There were some issues with basic contour segmentation right after morph
operations. Oysters that were too close were detected as a single, large
oyster. This made it impossible to isolate individual oysters for
analysis.

This commit implements a robust watershed algorithm to solve this
problem:

* Adds a configurable watershed step to the `00_segment_oysters` script.
* The algorithm erodes the binary mask to find reliable "cores" for each
  oyster before flooding to find the separation boundary.
* Introduces an intelilgent fragment merging system that re-assigns
  significant tissue pieces (e.g. gills that were separated during WSI
preparation) to their closest parent oyster, while discarding noise.
* This is all controlled via parameters in the `config.yaml` for easy
  tuning.

--- a/config.yaml
+++ b/config.yaml
@@ -67,10 +67,18 @@ oyster_segmentation:
   adaptive_thresh_block_size: 11
   adaptive_thresh_c: 2
   morph_close_kernel: [5, 5]
-  morph_close_iter: 3
+  morph_close_iter: 2
   morph_open_kernel: [3, 3]
   morph_open_iter: 2
   min_contour_area_percent: 0.01
+
+  # Watrershed separation parameters
+  use_watershed_separation: true
+  watershed_erosion_iterations: 6
+
+  # Robust Fragment Merging
+  enable_fragment_merging: true
+  min_fragment_area_percent: 0.001 # Fragments smaller than this % of the image will be discarded as noise
 
   # Debugging
   save_debug_images: true
