--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 # Core Libraries
+safetensors<0.4.3
 ultralytics
 torch
 torchvision
@@ -7,6 +8,12 @@ torchvision
 tifffile
 numpy<2.0
 opencv-python
+
+# For Segmentation Model
+segmentation-models-pytorch
+albumentations
+timm
+tensorboard
 
 # Utilities & File I/O
 pyyaml
