feat: Implement hybrid SAM-based segmentation pipeline
- Implements a new primary script `00_segment_with_sam.py` for robust oyster instance segmentation, replacing previous methods.
- Archives the experimental U-Net pipeline and updates dependencies for the new SAM-based workflow.

Pipeline Strategy:
- Uses a hierarchical classical CV pipeline to generate robust prompts for SAM.
- A fast contour-filtering method handles well-separated oysters.
- A targeted Watershed algorithm and a final geometric split serve as fallbacks for difficult, touching oysters.
- Prompts are a rich package of a bounding box, a reliable positive centroid, and multiple negative points for separation and tightness.
- Uses the official Segment Anything Model (vit_h) for high-fidelity segmentation.

Key Features:
- Implements intelligent multi-mask selection, choosing the best of SAM's three candidate masks based on a Dice score against a CV-generated proxy mask.
- Includes a sophisticated, optimized "mask repair" step that finds and reclaims missed tissue fragments (e.g., gills) using a distance transform.
- Generates a comprehensive set of debug visualizations for every stage of the process, including prompt generation, mask selection, and the final repair step.

--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,16 @@ tifffile
 numpy<2.0
 opencv-python
 
-# For Segmentation Model
-segmentation-models-pytorch
-albumentations
-timm
-tensorboard
+# For U-Net Segmentation Model
+#albumentations
+#timm
+#tensorboard
+
+# For SAM-based Segmentation
+segment-anything @ git+https://github.com/facebookresearch/segment-anything.git
+
+# For Segmentation Evaluation
+segmentation_models_pytorch
 
 # Utilities & File I/O
 pyyaml
