--- a/config.yaml
+++ b/config.yaml
@@ -27,10 +27,10 @@ paths:
   logs: "logs/"
 
 # --- Paths for the archived U-Net segmentation approach ---
-#  tensorboard_log_dir: "logs/tensorboard_logs/"
+  tensorboard_log_dir: "logs/tensorboard_logs/"
   segmentation_annotations: "/Volumes/One Touch/MSX Project/data/interim/segmentation_annotations"
-#  segmentation_dataset: "/Volumes/One Touch/MSX Project/data/processed/segmentation_dataset"
-#  segmentation_model_dir: "models/segmentation_model"
+  segmentation_dataset: "/Volumes/One Touch/MSX Project/data/processed/segmentation_dataset"
+  segmentation_model_dir: "models/segmentation_model"
 
 # 2. SAM-Based Oyster Segmentation
 # Parameters controlling the `00_segment_with_sam.py` script.
@@ -116,47 +116,47 @@ inference:
 #
 # Controls the `archive/00_segment_oysters_classical.py` script.
 # -------------------------------------------------------------------
-#oyster_segmentation:
-#  # Processing parameters
-#  processing_downsample: 32.0
-#  num_oysters_to_detect: 2
-#
-#  # Image pre-processing parameters for tissue detection
-#  gaussian_blur_kernel: [3, 3]
-#  adaptive_thresh_block_size: 11
-#  adaptive_thresh_c: 2
-#  morph_close_kernel: [5, 5]
-#  morph_close_iter: 2
-#  morph_open_kernel: [3, 3]
-#  morph_open_iter: 2
-#  min_contour_area_percent: 0.01
-#
-#  # Watrershed separation parameters
-#  use_watershed_separation: true
-#  watershed_erosion_iterations: 8
-#
-#  # Robust Fragment Merging
-#  enable_fragment_merging: true
-#  min_fragment_area_percent: 0.001 # Fragments smaller than this % of the image will be discarded as noise
-#
-#  # Debugging
-#  save_debug_images: true
-#  debug_img_max_dim: 1024
+oyster_segmentation:
+  # Processing parameters
+  processing_downsample: 32.0
+  num_oysters_to_detect: 2
+
+  # Image pre-processing parameters for tissue detection
+  gaussian_blur_kernel: [3, 3]
+  adaptive_thresh_block_size: 11
+  adaptive_thresh_c: 2
+  morph_close_kernel: [5, 5]
+  morph_close_iter: 2
+  morph_open_kernel: [3, 3]
+  morph_open_iter: 2
+  min_contour_area_percent: 0.01
+
+  # Watrershed separation parameters
+  use_watershed_separation: true
+  watershed_erosion_iterations: 8
+
+  # Robust Fragment Merging
+  enable_fragment_merging: true
+  min_fragment_area_percent: 0.001 # Fragments smaller than this % of the image will be discarded as noise
+
+  # Debugging
+  save_debug_images: true
+  debug_img_max_dim: 1024
 
 # -------------------------------------------------------------------
 # ARCHIVED ML-based segmentation parameters
 #
-# Controls the `archive/01_segment_oysters_ml.py` script.
+# Controls the `archive/unet_*` scripts.
 # -------------------------------------------------------------------
-segmentation:
-  # --- Data Creation (for 00a_create_seg_dataset.py) ---
+ml_segmentation:
+  # --- Data Creation (for 00a_create_dataset.py) ---
   overview_downsample: 32.0 # Downsample factor to extract WSI overviews
   image_size: [768, 1024] # Target size to resize all images/masks to [H, W]
   classes:
     "Oyster 1": 1                # NOTE: Class indices were 1-based for this script
     "Oyster 2": 2
 
-  # --- Model Training (for 00b_train_seg_model.py) ---
+  # --- Model Training (for unet_00b_train_model.py) ---
   device: "mps"                 # Device to use for training (options: "cpu", "cuda:0", "mps")
   encoder: "resnet34"           # Backbone for the U-Net
   encoder_weights: "imagenet"   # Use pre-trained weights
@@ -166,11 +166,11 @@ segmentation:
   freeze_epochs: 30             # Number of epochs to train with the encoder frozen
   finetune_lr_factor: 0.01   # Factor to reduce LR by for the fine-tuning phase (0.001 -> 0.0001)
   selection_val_split: false     # Whether to use a selection split for training/validation
-  data_split_seed: 42           # Random seed for splitting dataset into train/val sets
+  data_split_seed:           # Random seed for splitting dataset into train/val sets
   train_val_split: 0.8          # Fraction of data to use for training (80% train, 20% val)
-  early_stopping_patience: 50   # Early stopping patience for training
+  early_stopping_patience: 20   # Early stopping patience for training
 
-  # --- Inference (for 00_run_segmentation.py) ---
+  # --- Inference (for unet_00_run_inference.py) ---
   model_checkpoint: "models/segmentation_model/best_model.pt" # Path to the trained segmentation model
   confidence_threshold: 0.5     # Probability threshold to create binary mask
   min_object_size: 1000         # Minimum pixel area to keep a predicted object after inference
