--- a/requirements.txt
+++ b/requirements.txt
@@ -10,9 +10,10 @@ numpy<2.0
 opencv-python
 
 # For U-Net Segmentation Model
-#albumentations
-#timm
-#tensorboard
+albumentations
+timm
+tensorboard
+scikit-learn
 
 # For SAM-based Segmentation
 segment-anything @ git+https://github.com/facebookresearch/segment-anything.git
