--- a/config_hpc.yaml
+++ b/config_hpc.yaml
@@ -73,7 +73,8 @@ evaluation:
 # -------------------------------------------------------------------
 dataset_creation:
   patch_size: 640 # The size of square patches (in pixels) to create.
-  train_val_split: 0.8 # 80% for training, 20% for validation.
+  train_val_test_split: [0.70, 0.15, 0.15] # Train/Val/Test ratios for random split
+  patch_level_val_split: 0.15 # Fraction of training patches to use for validation (fallback)
   classes:
     "MSX Plasmodia": 0
     "MSX Spores": 1
@@ -89,6 +90,7 @@ dataset_creation:
 # -------------------------------------------------------------------
 training:
   yolo_model: "yolov8n.pt"
+  use_latest_model: false  # Set to true to resume from latest checkpoint
   epochs: 100
   batch_size: 16
   device: "cuda:0" # HPC uses CUDA
