Map MSX Plasmodia alias for two-class HPC dataset creation

--- a/config_hpc.yaml
+++ b/config_hpc.yaml
@@ -78,6 +78,8 @@ dataset_creation:
   classes:
     "Distractor": 0
     "Plasmodia": 1
+  class_aliases:
+    "MSX Plasmodia": "Plasmodia"
 
 # 4. Training Parameters (YOLO)
 # Parameters controlling the `02_train_yolo.py` script.
