--- a/config_hpc.yaml
+++ b/config_hpc.yaml
@@ -102,6 +102,7 @@ dataset_creation:
 training:
   yolo_model: "yolov8n.pt"
   use_latest_model: false  # Set to true to resume from latest checkpoint
+  run_namespace: "hpc_plasmodia_distractor"
   epochs: 100
   batch_size: 16
   device: "cuda:0" # HPC uses CUDA
@@ -117,6 +118,7 @@ training:
 # Parameters controlling the `03_run_inference.py` script.
 # -------------------------------------------------------------------
 inference:
+  model_run_namespace: "hpc_plasmodia_distractor"
   model_checkpoint: "/home/jezul/scratch/oyster_data/models/yolov8n_msx_oyster_run/weights/best.pt"
   patch_overlap: 0.2
   conf_threshold: 0.25
